# AIPCRP

./: .gitignore  CLAUDE.md  README.md  build.bat  install.bat  start.bat  项目思想.txt
.claude/: settings.local.json
backend-rs/: CLAUDE.md  Cargo.toml
backend-rs/src/: error.rs  main.rs  state.rs
backend-rs/src/api/: chat.rs  config.rs  docs.rs  graph.rs  health.rs  mod.rs
backend-rs/src/config/: app_config.rs  mod.rs
backend-rs/src/llm/: anthropic.rs  client.rs  format.rs  mod.rs  openai.rs  types.rs
backend-rs/src/models/: api.rs  mod.rs  ws.rs
backend-rs/src/services/: llm_service.rs  mod.rs  prompt_service.rs
backend-rs/src/services/code_analyzer/: generic.rs  go.rs  imports.rs  java.rs  javascript.rs  mod.rs  python.rs  types.rs
backend-rs/src/services/doc_generator/: checkpoint.rs  generator.rs  mod.rs  processor.rs  prompts.rs  scanner.rs  types.rs
backend-rs/src/utils/: mod.rs  request_logger.rs
frontend/: electron-builder.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/main/: index.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/: index.html  main.tsx
frontend/src/renderer/src/: App.tsx
frontend/src/renderer/src/components/chat/: ChatPanel.tsx
frontend/src/renderer/src/services/: docService.ts
frontend/src/renderer/src/stores/: chatStore.ts  docStore.ts  editorStore.ts  fileStore.ts  graphStore.ts
frontend/src/renderer/src/styles/: globals.css
frontend/src/renderer/src/types/: chat.d.ts  file.d.ts
frontend/src/renderer/src/utils/: docPathMapper.ts
(+10 files in other folders)
