[package]
name = "backend-rs"
version = "1.0.0"
edition = "2021"
description = "AI Code Review Platform - Rust Backend"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }

# JSON 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 异步流
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"

# 工具
once_cell = "1"
parking_lot = "0.12"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
thiserror = "1"
anyhow = "1"
glob = "0.3"
dashmap = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
